# unifly-xplm

./: .clangd  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  build.fish  message.pb.cc  message.pb.h  pilot_local.pb.cc  pilot_local.pb.h  pilot_remote.pb.cc  pilot_remote.pb.h  readme.md  vcpkg.json
.github/workflows/: macos.yml  publish.yml  publish_self_hosted.yml  windows.yml
UniFly-XPLM/Resources/: Doc8643.txt
inc/: aircraft_manager.h  config.h  data_ref_access.h  data_ref_owned.h  network_aircraft.h  plugin.h  socket.h  stdafx.h  terrain_probe.h  unifly.h  utilities.h
mac_x64/: unifly.xpl
schema/: buf.yaml  message.proto  pilot_local.proto  pilot_remote.proto  settings.proto
schema/unifly/schema/v1/: message.proto  settings.proto
src/: aircraft_manager.cpp  config.cpp  data_ref_access.cpp  data_ref_owned.cpp  network_aircraft.cpp  plugin.cpp  socket.cpp  terrain_probe.cpp  unifly.cpp  utilities.cpp
